<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white_full"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/main_FrameButtonBar"
        style="android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:background="@color/black_overlay" >

        <ImageView
            android:id="@+id/main_imgTitleIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/main_tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/main_mnuFile"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mnuFile_Header" />

        <Button
            android:id="@+id/main_mnuEdit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mnuEdit_Header" />

        <Button
            android:id="@+id/main_mnuOptions"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mnuOptions_Header" />

    </LinearLayout>

    <TextView
        android:id="@+id/main_tvListFiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/lblListFiles"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <ListView
        android:id="@+id/main_lstList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:divider="@android:color/transparent"
		android:dividerHeight="8dp"
		android:scrollbarStyle="outsideOverlay"
        android:listSelector="@drawable/list_selector" >
    </ListView>

</LinearLayout>
